<resources>
    <string name="app_name">WW</string>
    <string name="send">发送</string>
    <string name="hint">请输入内容</string>
    <string name="hint_icon">hint icon</string>
    <string name="email">邮箱</string>
    <string name="email_hint">请输入邮件地址</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
</resources>
