<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/email"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline05"
        app:layout_constraintEnd_toStartOf="@+id/m_EditText_Email"
        app:layout_constraintStart_toStartOf="@+id/guideline01"
        app:layout_constraintTop_toTopOf="@+id/m_EditText_Email" />

    <EditText
        android:id="@+id/m_EditText_Email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/guideline05"
        app:layout_constraintEnd_toStartOf="@+id/guideline03"
        app:layout_constraintStart_toStartOf="@+id/guideline02"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/m_EditText_Password"
        app:layout_constraintEnd_toStartOf="@+id/guideline02"
        app:layout_constraintStart_toStartOf="@+id/guideline01"
        app:layout_constraintTop_toBottomOf="@+id/guideline05" />

    <EditText
        android:id="@+id/m_EditText_Password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline03"
        app:layout_constraintStart_toStartOf="@+id/guideline02"
        app:layout_constraintTop_toTopOf="@+id/guideline05"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_EditText_Password"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>